--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <!-- Header y Navegación (Más compacto en móvil) -->
         <header class="flex justify-between items-center py-3 mb-4 sm:py-4 sm:mb-6 border-b-4 border-primary">
             <h1 class="text-2xl sm:text-3xl font-extrabold text-secondary flex items-center cursor-pointer" onclick="navigate('dashboard')">
-                <!-- Icono de Hexágono (Corregido) -->
+                <!-- Icono de Hexágono -->
                 <i data-lucide="hexagon" class="w-7 h-7 sm:w-8 sm:h-8 mr-2 text-primary"></i>
                 Apiario Digital
             </h1>
